--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
+    "@fundamentry/eslint-config-json": "workspace:*",
     "@fundamentry/typescript-config": "^1.0.0",
     "@types/eslint": "^8.56.12",
     "@typescript-eslint/eslint-plugin": "^8.53.1",
